--- a/style.css
+++ b/style.css
@@ -54,7 +54,8 @@ text-align: left;
 #image {
 display: block;
 max-width: 100%;
-height: auto;
+height: 100vh;
+width: 80vw;
 margin: 0 auto;
 border-radius: 25px;
 }
